// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    {
      "className": "orion-fusion-theme",
    }
  }
>
  <SlideGroup
    isAnimated={false}
    items={
      [
        <div>
          First
        </div>,
        <div>
          Second
        </div>,
        <div>
          Third
        </div>,
      ]
    }
  >
    <TransitionGroup
      childFactory={[Function]}
      className="slide-group orion-fusion-theme"
      component="div"
      key="1"
    >
      <div
        className="slide-group orion-fusion-theme"
      >
        <CSSTransition
          classNames={
            {
              "enter": "enter",
              "enterActive": "enter-active",
              "exit": "exit",
              "exitActive": "exit-active",
            }
          }
          enter={false}
          exit={false}
          id="shmmoop"
          in={true}
          key=".$1"
          onEntered={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          timeout={300}
        >
          <Transition
            appear={false}
            enter={false}
            exit={false}
            id="shmmoop"
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={false}
          >
            <Slide
              id="shmmoop"
              isHidden={true}
              isNested={false}
            >
              <div
                aria-hidden={true}
                className="slide orion-fusion-theme"
                onClick={[Function]}
                onKeyUp={[Function]}
              >
                <VisuallyHiddenText
                  aria-hidden={true}
                  aria-live="polite"
                >
                  <span
                    aria-hidden={true}
                    aria-live="polite"
                    className="visually-hidden-text"
                  />
                </VisuallyHiddenText>
                <div
                  className="slide-shadow"
                />
                <div
                  key="1"
                >
                  First
                </div>
              </div>
            </Slide>
          </Transition>
        </CSSTransition>
        <CSSTransition
          classNames={
            {
              "enter": "enter",
              "enterActive": "enter-active",
              "exit": "exit",
              "exitActive": "exit-active",
            }
          }
          enter={false}
          exit={false}
          id="shmmoop"
          in={true}
          key=".$2"
          onEntered={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          timeout={300}
        >
          <Transition
            appear={false}
            enter={false}
            exit={false}
            id="shmmoop"
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={false}
          >
            <Slide
              id="shmmoop"
              isHidden={true}
              isNested={true}
            >
              <div
                aria-hidden={true}
                className="slide orion-fusion-theme"
                onClick={[Function]}
                onKeyUp={[Function]}
              >
                <VisuallyHiddenText
                  aria-hidden={false}
                  aria-live="polite"
                >
                  <span
                    aria-hidden={false}
                    aria-live="polite"
                    className="visually-hidden-text"
                  />
                </VisuallyHiddenText>
                <div
                  className="slide-shadow"
                />
                <div
                  key="2"
                >
                  Second
                </div>
              </div>
            </Slide>
          </Transition>
        </CSSTransition>
        <CSSTransition
          classNames={
            {
              "enter": "enter",
              "enterActive": "enter-active",
              "exit": "exit",
              "exitActive": "exit-active",
            }
          }
          enter={false}
          exit={false}
          id="shmmoop"
          in={true}
          key=".$3"
          onEntered={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          timeout={300}
        >
          <Transition
            appear={false}
            enter={false}
            exit={false}
            id="shmmoop"
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={false}
          >
            <Slide
              id="shmmoop"
              isHidden={false}
              isNested={true}
            >
              <div
                aria-hidden={null}
                className="slide orion-fusion-theme"
                onClick={[Function]}
                onKeyUp={[Function]}
              >
                <VisuallyHiddenText
                  aria-hidden={false}
                  aria-live="polite"
                >
                  <span
                    aria-hidden={false}
                    aria-live="polite"
                    className="visually-hidden-text"
                  />
                </VisuallyHiddenText>
                <div
                  className="slide-shadow"
                />
                <div
                  key="3"
                >
                  Third
                </div>
              </div>
            </Slide>
          </Transition>
        </CSSTransition>
      </div>
    </TransitionGroup>
  </SlideGroup>
</ThemeContextProvider>
`;

exports[`should render a SlideGroup with animation enabled 1`] = `
<TransitionGroup
  childFactory={[Function]}
  className="slide-group"
  component="div"
  key="1"
>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={true}
    exit={true}
    id="shmmoop"
    key="1"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={true}
      isNested={false}
    >
      <div
        key="1"
      >
        First
      </div>
    </Slide>
  </CSSTransition>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={true}
    exit={true}
    id="shmmoop"
    key="2"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={true}
      isNested={true}
    >
      <div
        key="2"
      >
        Second
      </div>
    </Slide>
  </CSSTransition>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={true}
    exit={true}
    id="shmmoop"
    key="3"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={false}
      isNested={true}
    >
      <div
        key="3"
      >
        Third
      </div>
    </Slide>
  </CSSTransition>
</TransitionGroup>
`;

exports[`should render a default SlideGroup 1`] = `
<TransitionGroup
  childFactory={[Function]}
  className="slide-group"
  component="div"
  key="1"
>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={false}
    exit={false}
    id="shmmoop"
    key="1"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={true}
      isNested={false}
    >
      <div
        key="1"
      >
        First
      </div>
    </Slide>
  </CSSTransition>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={false}
    exit={false}
    id="shmmoop"
    key="2"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={true}
      isNested={true}
    >
      <div
        key="2"
      >
        Second
      </div>
    </Slide>
  </CSSTransition>
  <CSSTransition
    classNames={
      {
        "enter": "enter",
        "enterActive": "enter-active",
        "exit": "exit",
        "exitActive": "exit-active",
      }
    }
    enter={false}
    exit={false}
    id="shmmoop"
    key="3"
    onEntered={[Function]}
    onExit={[Function]}
    timeout={300}
  >
    <Slide
      isHidden={false}
      isNested={true}
    >
      <div
        key="3"
      >
        Third
      </div>
    </Slide>
  </CSSTransition>
</TransitionGroup>
`;
